attempting to resolve ipad overflow issue

--- a/src/css/legislation_fixes.scss
+++ b/src/css/legislation_fixes.scss
@@ -51,6 +51,7 @@
     // fixed margin collapse, for height calculations
     *[data-location], *[data-hook]{
         overflow:auto;
+        -webkit-overflow-scrolling: auto;
     }
     .prov *, .label-para *{
         overflow:visible;
